--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -47,6 +47,9 @@
     </property>
     <item row="0" column="0">
      <widget class="QWidget" name="widgetBase" native="true">
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
       <property name="styleSheet">
        <string notr="true"/>
       </property>
@@ -191,6 +194,9 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="contextMenuPolicy">
+          <enum>Qt::NoContextMenu</enum>
+         </property>
          <property name="styleSheet">
           <string notr="true"/>
          </property>
@@ -218,6 +224,9 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="contextMenuPolicy">
+             <enum>Qt::NoContextMenu</enum>
+            </property>
             <property name="styleSheet">
              <string notr="true"/>
             </property>
@@ -230,6 +239,9 @@
               <width>0</width>
               <height>0</height>
              </size>
+            </property>
+            <property name="contextMenuPolicy">
+             <enum>Qt::NoContextMenu</enum>
             </property>
             <property name="styleSheet">
              <string notr="true"/>
